// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerRegister should match a snapshot where hasDeveloperOrg 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 1.25rem;
 mock-css.
  font-size: 1.5rem;
"
            style="height: 40px; width: 200px;"
          >
            <svg
              style="height: 40px; width: 200px;"
            />
          </mock-styled.span>
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
"
          >
            <mock-styled.h2
              classname="mock-css. mock-css."
            >
              Welcome
            </mock-styled.h2>
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              to the Reapit Foundations DeveloperPortal
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            The organisation ‘
            Some Org
            ’ has already been setup within the DeveloperPortal. To access this organisation, you will need to be invited by the Admin who set the account up.
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css. mock-css. mock-css."
          >
            For more information on how an Admin can Invite Members to an organisation, please
             
            <a
              rel="noreferrer"
              target="_blank"
            >
              click here
            </a>
            .
          </mock-styled.p>
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.button
                classname="mock-css."
              >
                <mock-styled.div />
                Visit AppMarket
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css. mock-css."
          />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 1.25rem;
 mock-css.
  font-size: 1.5rem;
"
          style="height: 40px; width: 200px;"
        >
          <svg
            style="height: 40px; width: 200px;"
          />
        </mock-styled.span>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.h2
            classname="mock-css. mock-css."
          >
            Welcome
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            to the Reapit Foundations DeveloperPortal
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.p
          classname="mock-css. mock-css."
        >
          The organisation ‘
          Some Org
          ’ has already been setup within the DeveloperPortal. To access this organisation, you will need to be invited by the Admin who set the account up.
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css. mock-css. mock-css."
        >
          For more information on how an Admin can Invite Members to an organisation, please
           
          <a
            rel="noreferrer"
            target="_blank"
          >
            click here
          </a>
          .
        </mock-styled.p>
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.button
              classname="mock-css."
            >
              <mock-styled.div />
              Visit AppMarket
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p
          classname="mock-css. mock-css."
        />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CustomerRegister should match a snapshot where hasDeveloperOrg is false and isCustomerAdmin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 1.25rem;
 mock-css.
  font-size: 1.5rem;
"
            style="height: 40px; width: 200px;"
          >
            <svg
              style="height: 40px; width: 200px;"
            />
          </mock-styled.span>
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
"
          >
            <mock-styled.h2
              classname="mock-css. mock-css."
            >
              Welcome
            </mock-styled.h2>
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              to the Reapit Foundations DeveloperPortal
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            This portal is used for building apps and integrations on top of our Platform APIs.
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            Whilst using the DeveloperPortal to build against our Sandbox environment is free, API consumption charges apply when your app or integration is published (either privately or publicly) in the AppMarket.
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css. mock-css. mock-css."
          >
            To view our Terms and Conditions, please click ‘Proceed’ below.
          </mock-styled.p>
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.button
                classname="mock-css."
              >
                <mock-styled.div />
                Visit AppMarket
              </mock-styled.button>
              <mock-styled.button
                classname="mock-css."
              >
                <mock-styled.div />
                Proceed
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css. mock-css."
          />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 1.25rem;
 mock-css.
  font-size: 1.5rem;
"
          style="height: 40px; width: 200px;"
        >
          <svg
            style="height: 40px; width: 200px;"
          />
        </mock-styled.span>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.h2
            classname="mock-css. mock-css."
          >
            Welcome
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            to the Reapit Foundations DeveloperPortal
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.p
          classname="mock-css. mock-css."
        >
          This portal is used for building apps and integrations on top of our Platform APIs.
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css. mock-css."
        >
          Whilst using the DeveloperPortal to build against our Sandbox environment is free, API consumption charges apply when your app or integration is published (either privately or publicly) in the AppMarket.
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css. mock-css. mock-css."
        >
          To view our Terms and Conditions, please click ‘Proceed’ below.
        </mock-styled.p>
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.button
              classname="mock-css."
            >
              <mock-styled.div />
              Visit AppMarket
            </mock-styled.button>
            <mock-styled.button
              classname="mock-css."
            >
              <mock-styled.div />
              Proceed
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p
          classname="mock-css. mock-css."
        />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CustomerRegister should match a snapshot where hasDeveloperOrg is false, isCustomer but not admin 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div>
        <mock-styled.div>
          <mock-styled.span
            classname="mock-css.
  margin-bottom: 1.25rem;
 mock-css.
  font-size: 1.5rem;
"
            style="height: 40px; width: 200px;"
          >
            <svg
              style="height: 40px; width: 200px;"
            />
          </mock-styled.span>
          <mock-styled.div
            classname="mock-css.
  flex-direction: column;
"
          >
            <mock-styled.h2
              classname="mock-css. mock-css."
            >
              Welcome
            </mock-styled.h2>
            <mock-styled.p
              classname="mock-css. mock-css."
            >
              to the Reapit Foundations DeveloperPortal
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            Unfortunately, only an Admin can setup your developer organisation ‘
            Some Org
            ’. Please contact an Admin to set up the account.
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            They can do this up from
             
            <a
              href="undefined/select-role"
              rel="noreferrer"
              target="_blank"
            >
              this page
            </a>
            .
          </mock-styled.p>
          <mock-styled.p
            classname="mock-css. mock-css. mock-css."
          >
            You will need to contact them directly to perform this task.
          </mock-styled.p>
          <mock-styled.div>
            <mock-styled.div
              classname="mock-css."
            >
              <mock-styled.button
                classname="mock-css."
              >
                <mock-styled.div />
                Visit AppMarket
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p
            classname="mock-css. mock-css."
          />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div>
      <mock-styled.div>
        <mock-styled.span
          classname="mock-css.
  margin-bottom: 1.25rem;
 mock-css.
  font-size: 1.5rem;
"
          style="height: 40px; width: 200px;"
        >
          <svg
            style="height: 40px; width: 200px;"
          />
        </mock-styled.span>
        <mock-styled.div
          classname="mock-css.
  flex-direction: column;
"
        >
          <mock-styled.h2
            classname="mock-css. mock-css."
          >
            Welcome
          </mock-styled.h2>
          <mock-styled.p
            classname="mock-css. mock-css."
          >
            to the Reapit Foundations DeveloperPortal
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.p
          classname="mock-css. mock-css."
        >
          Unfortunately, only an Admin can setup your developer organisation ‘
          Some Org
          ’. Please contact an Admin to set up the account.
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css. mock-css."
        >
          They can do this up from
           
          <a
            href="undefined/select-role"
            rel="noreferrer"
            target="_blank"
          >
            this page
          </a>
          .
        </mock-styled.p>
        <mock-styled.p
          classname="mock-css. mock-css. mock-css."
        >
          You will need to contact them directly to perform this task.
        </mock-styled.p>
        <mock-styled.div>
          <mock-styled.div
            classname="mock-css."
          >
            <mock-styled.button
              classname="mock-css."
            >
              <mock-styled.div />
              Visit AppMarket
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.p
          classname="mock-css. mock-css."
        />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
